--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
             }
 
             body {
-                background-color: lightblue;
+                background-color: oldlace;
             }
 
             * {
