updated all html files and added a stylesheet

--- a/dashboard.html
+++ b/dashboard.html
@@ -2,10 +2,21 @@
     <html>
         <head>
             <title>Dashboard</title>
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+            <link rel="stylesheet" type="text/css" href="stylesheet.css">
+            <style>
+            * {
+                font-family:'Roboto', sans-serif;
+            }
+            </style>
         </head>
         <body>
-            <h1>Dashboard</h1>
-            <a href="index.html">Return to home page</a>
-            <p></p>            
+            <h1 class="header">Dashboard</h1> 
+            <ul class="navbar"> 
+                <li><a href="index.html">Home page</a></li>
+                <li><a href="profile.html">Profile page</a></li>
+                <li><a class="active" href="dashboard.html">Dashboard</a></li>
+                <li><a href="faq.html">Frequently Asked Questions (FAQ)</a></li>
+            </ul>         
         </body>
     </html>
