--- a/index.html
+++ b/index.html
@@ -3,56 +3,16 @@
         <head>
             <title>Home</title>
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+            <link rel="stylesheet" type="text/css" href="stylesheet.css">
             <style>
-                * {
-                    font-family:'Roboto', sans-serif;
-                }
+            
 
-                * {
-                    box-sizing: border-box;
-                }
-
-                body {
-                    background-color: oldlace;
-                    margin: 0;
-                    padding: 0;
-                }
-                
-                .header {
-                    padding: 20px;
-                    text-align: center;
-                    text-transform: uppercase;
-                }
-
-                .navbar {
-                    overflow: hidden;
-                    background-color: oldlace;
-                    text-align: center;
-                    list-style-type: none;
-                    margin-bottom: 40px;
-                    padding: 0;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: left;
-                }
-
-                .navbar a {
-                    display: block;
-                    color: black;
-                    font-size: 20px;
-                    padding: 14px 16px;
-                    text-decoration: none;
-                }
-
-                .navbar a:hover {
-                    background-color: #ddd;
-                    color: black;
-                }
             </style>
         </head>
         <body>
-            <h1 class="header">Stefans website</h1>
+            <h1 class="header">Home page</h1>
             <ul class="navbar"> 
+                <li><a class="active" href="index.html">Home page</a></li>
                 <li><a href="profile.html">Profile page</a></li>
                 <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a href="faq.html">Frequently Asked Questions (FAQ)</a></li>
