--- a/faq.html
+++ b/faq.html
@@ -2,10 +2,22 @@
     <html>
         <head>
             <title>FAQ</title>
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+            <link rel="stylesheet" type="text/css" href="stylesheet.css">
+            <style>
+            * {
+                font-family:'Roboto', sans-serif;
+            }
+            </style>
         </head>
         <body>
-            <h1>Frequently Asked Questions</h1>
-            <a href="index.html">Return to home page</a>
+            <h1 class="header">Frequently Asked Questions</h1>
+            <ul class="navbar"> 
+                <li><a href="index.html">Home page</a></li>
+                <li><a href="profile.html">Profile page</a></li>
+                <li><a href="dashboard.html">Dashboard</a></li>
+                <li><a class="active" href="faq.html">Frequently Asked Questions (FAQ)</a></li>
+            </ul> 
             <p></p>            
         </body>
     </html>
