--- a/dashboard.html
+++ b/dashboard.html
@@ -5,8 +5,16 @@
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
             <link rel="stylesheet" type="text/css" href="stylesheet.css">
             <style>
-            * {
-                font-family:'Roboto', sans-serif;
+             table, th, td {
+                border: 1px solid black;
+                border-collapse: collapse;
+            }
+            th, td {
+                padding: 15px;
+                text-align: left;
+            }
+            table {
+                border-spacing: 5px;
             }
             </style>
         </head>
@@ -17,6 +25,123 @@
                 <li><a href="profile.html">Profile page</a></li>
                 <li><a class="active" href="dashboard.html">Dashboard</a></li>
                 <li><a href="faq.html">Frequently Asked Questions (FAQ)</a></li>
-            </ul>         
+            </ul>
+            <table style="width: 100%;">
+                <tr style="background-color: #ecd9ba;">
+                    <th>Quartile</th>
+                    <th>Course</th>
+                    <th>EC</th>
+                    <th>Exam</th>
+                    <th>Grade</th>
+                </tr>
+                <tr style="background-color: #ffeac9;">
+                    <td rowspan="3">Q1</td>
+                    <td>Programme and Career Orientation</td>
+                    <td>2,5</td>
+                    <td>Assessment</td>
+                    <td>-</td>
+                </tr>
+                <tr style="background-color: #ffeac9;">
+                    <td>Computer Sciene Basic</td>
+                    <td>7,5</td>
+                    <td>Case study</td>
+                    <td>-</td>
+                </tr>
+                <tr style="background-color: #ffeac9;">
+                    <td>Programming Basics</td>
+                    <td>5</td>
+                    <td>Assessment</td>
+                    <td>-</td>
+                </tr>
+                <tr style="background-color: #e2d0b2;">
+                    <td rowspan="3">Q2</td>
+                    <td rowspan="2">Object Oriented Programming</td>
+                    <td rowspan="2">10</td>
+                    <td>Case study</td>
+                    <td rowspan="2">-</td>
+                </tr>
+                <tr style="background-color: #e2d0b2;">
+                    <td>Project</td>
+                </tr>
+                <tr style="background-color: #e2d0b2;">
+                    <td>Professional Skils 1</td>
+                    <td>2,5</td>
+                    <td>Portfolio</td>
+                    <td>-</td>
+                </tr> 
+                <tr style="background-color: #ffeac9;">
+                    <td rowspan="7">Q3</td>
+                    <td rowspan="2">Framework Project 1</td>
+                    <td rowspan="2">5</td>
+                    <td>Portfolio 1</td>
+                    <td rowspan="2">-</td>
+                </tr>
+                <tr style="background-color: #ffeac9;">
+                    <td>Portfolio 2</td>
+                </tr>
+                <tr style="background-color: #ffeac9;">
+                    <td>Framework Devopment 1</td>
+                    <td>5</td>
+                    <td>Case study</td>
+                    <td>-</td>
+                </tr>
+                <tr style="background-color: #ffeac9;">
+                    <td>Professional Working Evironment</td>
+                    <td>2,5</td>
+                    <td>Assessment</td>
+                    <td>-</td>
+                </tr>
+                <tr style="background-color: #ffeac9;">
+                    <td rowspan="3">Professional Skills 2</td>
+                    <td rowspan="3">2,5</td>
+                    <td>Portfolio</td>
+                    <td rowspan="3">-</td>
+                </tr>
+                <tr style="background-color: #ffeac9;">
+                    <td>Written 1</td>
+                </tr>
+                <tr style="background-color: #ffeac9;">
+                    <td>Written 2</td>
+                </tr>
+                <tr style="background-color: #e2d0b2;">
+                    <td rowspan="5">Q4</td>
+                    <td>Framework Project 2</td>
+                    <td>5</td>
+                    <td>Portfolio</td>
+                    <td>-</td>
+                </tr>
+                <tr style="background-color: #e2d0b2;">
+                    <td>Framework Development 2</td>
+                    <td>5</td>
+                    <td>Portfolio</td>
+                    <td>-</td>
+                </tr>
+                <tr style="background-color: #e2d0b2;">
+                    <td rowspan="3">Professional Skills 3</td>
+                    <td rowspan="3">2,5</td>
+                    <td>Portfolio</td>
+                    <td rowspan="3">-</td>
+                </tr>
+                <tr style="background-color: #e2d0b2;">
+                    <td>Written 1</td>
+                </tr>
+                <tr style="background-color: #e2d0b2;">
+                    <td>Written 2</td>
+                </tr>
+                <tr style="background-color: #ffeac9;">
+                  <td rowspan="2">Whenever</td>
+                  <td>HZ Personality</td>
+                  <td>2,5</td>
+                  <td>Portfolio</td>
+                  <td>-</td>
+                </tr>
+                <tr style="background-color: #ffeac9;">
+                    <td>IT Personality</td>
+                    <td>2,5</td>
+                    <td>Portfolio</td>
+                    <td>-</td>
+                </tr>
+            </table>
+
         </body>
     </html>
