--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,8 @@
             <title>Profile</title>
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
             <link rel="stylesheet" type="text/css" href="stylesheet.css">
+            <link rel="icon" type="image/png" href="images/favicon-32x32.png">
+            <link rel="icon" type="image/png" href="images/favicon-16x16.png">
             <style>
             .row {
                 display: flex;
@@ -44,7 +46,7 @@
                 <li>Currently living at home with my parents in Middelburg</li>
                 <li>My hobbys and interests mostly fluctuate, although I have always liked football (Feyenoord fan)</li>
                 <li>Have a tiny bit of experience with application development</li>
-                <li>I finished my teacher's assistant education and have tried for a primary education degree.</li>
+                <li>I finished my teacher's assistant education and last year tried to get a primary education degree.</li>
             </ul> 
             <div class="row">
                 <div class="column">
