--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
             <title>Home</title>
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
             <link rel="stylesheet" type="text/css" href="stylesheet.css">
+            <link rel="icon" type="image/png" href="images/favicon-32x32.png">
+            <link rel="icon" type="image/png" href="images/favicon-16x16.png">
             <style>
-            
+            p { 
+                padding-left: 40px;
+                padding-right: 40px;
+            }
 
             </style>
         </head>
