--- a/profile.html
+++ b/profile.html
@@ -10,24 +10,20 @@
             .row {
                 display: flex;
             }
-
             .column {
                 flex: 33.33%;
                 padding: 10px;
             }
-
             .border {
                 border-radius: 10px;
             }
-
-            .item-list {
-                list-style-type: none;
-                margin: 0px 0px 0px 40px;
-                padding: 0;
+            .p-intro {
+                text-align: center;
+                font-size: 20px;
             }
-
-            .divider {
-                margin: 10px 0px 10px 0px;
+            .intro {
+                font-size: 20px;
+                padding-left: 23%;
             }
             </style>
         </head>
@@ -38,16 +34,22 @@
                 <li><a class="active" href="profile.html">Profile page</a></li>
                 <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a href="faq.html">Frequently Asked Questions (FAQ)</a></li>
-            </ul>        
-            <p style="margin: 0px 0px 0px 40px;">Who am I?</p>
-            <ul class="item-list">
-                <li>My name is Stefan</li>
-                <li>I am 23 years old</li>
-                <li>Currently living at home with my parents in Middelburg</li>
-                <li>My hobbys and interests mostly fluctuate, although I have always liked football (Feyenoord fan)</li>
-                <li>Have a tiny bit of experience with application development</li>
-                <li>I finished my teacher's assistant education and last year tried to get a primary education degree.</li>
             </ul> 
+            <p class="p-intro">Who am I?</p>
+            <pre class="intro">
+                My name is Stefan, I am 23 years old. I currently live at home with my parents in Middelburg.
+                My Hobbies and interests fluctuate often, altough I have always liked football (Feyenoord!).
+                I have some expierence with application development, though that is very minimal.
+                I finished my teacher's assistant education and last school year tried to go for a primary education degree.
+            </pre>
+            <p class="p-intro">The HBO level suits me because:</p>
+            <pre class="intro">
+                -
+            </pre>
+            <p class="p-intro">The study programme suits me because:</p>
+            <pre class="intro">
+                -
+            </pre>
             <div class="row">
                 <div class="column">
                     <img class="border" src="/sgeissler-repo/images/feyenoord-stadion-de-kuip.jpg" alt="De Kuip" style="width:100%; height: 450px">
