--- a/faq.html
+++ b/faq.html
@@ -4,8 +4,7 @@
             <title>FAQ</title>
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
             <link rel="stylesheet" type="text/css" href="stylesheet.css">
-            <link rel="icon" type="image/png" href="images/favicon-32x32.png">
-            <link rel="icon" type="image/png" href="images/favicon-16x16.png">
+            <link rel="icon" type="image/png" href="images/favicon.png">
             <style>
             * {
                 font-family:'Roboto', sans-serif;
@@ -20,6 +19,7 @@
                 <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a class="active" href="faq.html">Frequently Asked Questions (FAQ)</a></li>
             </ul> 
-            <p></p>            
+           
+
         </body>
     </html>
