--- a/profile.html
+++ b/profile.html
@@ -4,8 +4,7 @@
             <title>Profile</title>
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
             <link rel="stylesheet" type="text/css" href="stylesheet.css">
-            <link rel="icon" type="image/png" href="images/favicon-32x32.png">
-            <link rel="icon" type="image/png" href="images/favicon-16x16.png">
+            <link rel="icon" type="image/png" href="images/favicon.png">
             <style>
             .row {
                 display: flex;
@@ -38,13 +37,14 @@
             <p class="p-intro">Who am I?</p>
             <pre class="intro">
                 My name is Stefan, I am 23 years old. I currently live at home with my parents in Middelburg.
-                My Hobbies and interests fluctuate often, altough I have always liked football (Feyenoord!).
-                I have some expierence with application development, though that is very minimal.
+                My hobbies and interests fluctuate often, although I have always liked football (Feyenoord!).
+                I have some expierence with application development though very little.
                 I finished my teacher's assistant education and last school year tried to go for a primary education degree.
             </pre>
             <p class="p-intro">The HBO level suits me because:</p>
             <pre class="intro">
-                -
+                I like working independently and in a team. I'm motivated to finish this education and work a career in ICT.
+                
             </pre>
             <p class="p-intro">The study programme suits me because:</p>
             <pre class="intro">
