--- a/dashboard.html
+++ b/dashboard.html
@@ -4,8 +4,7 @@
             <title>Dashboard</title>
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
             <link rel="stylesheet" type="text/css" href="stylesheet.css">
-            <link rel="icon" type="image/png" href="images/favicon-32x32.png">
-            <link rel="icon" type="image/png" href="images/favicon-16x16.png">
+            <link rel="icon" type="image/png" href="images/favicon.png">
             <style>
             .column {
                 flex: 50%;
