--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,7 @@
                 padding-left: 40px;
                 padding-right: 40px;
                 font-size: 17px;
-                border: 2px solid black
+                border: 2px solid black;   
             }
             </style>
         </head>
