last updates before pitch

--- a/profile.html
+++ b/profile.html
@@ -17,12 +17,12 @@
                 border-radius: 10px;
             }
             .p-intro {
-                text-align: center;
-                font-size: 20px;
+            text-align: center;
+            font-size: 20px;
             }
             .intro {
-                font-size: 20px;
-                padding-left: 23%;
+            font-size: 20px;
+            padding-left: 23%;
             }
             </style>
         </head>
@@ -34,21 +34,21 @@
                 <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a href="faq.html">Frequently Asked Questions (FAQ)</a></li>
             </ul> 
-            <p class="p-intro">Who am I?</p>
+            <h2 class="p-intro">Who am I?</h2>
             <pre class="intro">
                 My name is Stefan, I am 23 years old. I currently live at home with my parents in Middelburg.
                 My hobbies and interests fluctuate often, although I have always liked football (Feyenoord!).
                 I have some expierence with application development though very little.
                 I finished my teacher's assistant education and last school year tried to go for a primary education degree.
             </pre>
-            <p class="p-intro">The HBO level suits me because:</p>
+            <h2 class="p-intro">The HBO level suits me because:</h2>
             <pre class="intro">
                 I like working independently and in a team. I'm motivated to finish this education and work a career in ICT.
-                
+                I'd like to create something to help the education sector, altough I'm not sure what that would be at this moment.
             </pre>
-            <p class="p-intro">The study programme suits me because:</p>
+            <h2 class="p-intro">The study programme suits me because:</h2>
             <pre class="intro">
-                -
+                Interest in coding and being a system administrator. Ambitious about my future in this job field.
             </pre>
             <div class="row">
                 <div class="column">
@@ -62,13 +62,12 @@
                 </div>
             </div>
               
-            <p style="margin: 20px 0px 0px 40px;">Some character traits to describe myself:</p> 
-            <ul class="item-list">
+            <h2 class="p-intro">Some character traits to describe myself:</h2> 
+            <ul class="intro" style="padding-left: 30%";>
                 <li>Fairness</li>
                 <li>Patience</li>
                 <li>Sense of humour</li>
-                <li>Lackadaisical</li>
-                <li>Can sometimes be pessimistic</li>
+                <li>Persistence</li>
              </ul>
             </body>
     </html>
