--- a/faq.html
+++ b/faq.html
@@ -9,6 +9,15 @@
             * {
                 font-family:'Roboto', sans-serif;
             }
+            .row {
+                display: flex;
+            }
+            .column {
+                flex: 33%;
+                padding: 20px;
+                overflow: hidden;
+                
+            }        
             </style>
             </head>
         <body>
@@ -19,7 +28,51 @@
                 <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a class="active" href="faq.html">Frequently Asked Questions (FAQ)</a></li>
             </ul> 
-           
+            <div class="row">
+                <div class="column">
+                    <h4>How can you print a document from your laptop at HZ?</h4>
+                    <p>Because of environmental considerations, the default settings are black & white and double-sided A4. You can reset the printer to colour or single-sided, when sending the print job. The print job remains available for up to 24 hours. It is deleted after this period.
+                        Once the print job has been requested you must register using your HZ pass on the TouchID next to the multifunctional printer.  Next, select printer option Print / Afdrukken.In the menu, select the multifunctional printer to where the job has been sent.  Next, you can see which printer job is ready to be printed. The print job is the completed provided there is sufficient credit on your printing account. When the printing is completed, press Stop on the TouchID, followed by Logout.</p>
+                </div>
+                <div class="column">
+                    <h4>How can you scan a document and send it to your laptop at HZ?</h4>
+                    <ul>
+                        <li>Ensure you have at least 0.07 credit. Although scanning is free, you must have this amount of credit on your HZ pass.</li>
+                        <li>Register using your HZ pass on the TouchID next to the multifunctional printer.</li>
+                        <li>In the TouchID menu, select option Scanning - Scan.</li>
+                        <li>Lay the original sheet on the feeder or glass plate.</li>
+                        <li>Press Scan and Send.</li>
+                        <li>Press Scan to me.</li>
+                        <li>Press Yes.</li>
+                        <li>Press the Start button.</li>
+                        <li>The following screen appears for scanning via the glass plate. Press the green Start button on the printer to scan page by page. Once this is ready, press Start Sending.</li>
+                        <li>When scanning is completed, press Stop on the TouchID, followed by Logout.</li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h4>What do you need to do when you are sick / show symptoms of coronavirus?</h4>
+                    <p>Stay home and contact your teacher via Teams/mail. <br> Call 0800 - 1202 to make an appointment at a test location nearby. The number is free of charge and can be reached seven days a week from 08.00 to 20.00 hours. You can also request a test online via <a href="www.rijksoverheid.nl/coronatest">www.rijksoverheid.nl/coronatest</a> (for this you need a DigiD). Before making the appointments, we will briefly ask you a number of questions about the complaints. When making the appointment a BSN-number will be asked for identification. Keep this number at hand when making the appointment and make a list of your contacts from 2 days before you became ill. After making the appointment they will give you the time and place where the test will be taken. The aim is to take the test as soon as possible, in principle the next day. The result comes 24-48 hours later.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <h4>How can you book a project space in one of the wings?</h4>
+                    <p>A total of 26 project group rooms can be found on the 1st, 2nd and 3rd floors. These can be reserved by employees and students themselves via the Selfservice portal. The rooms are suitable for 6-8 persons. They are equipped with an LCD screen, cables to connect the laptop to the screen, power supplies in the wall and a whiteboard. See the reservation manual for the project group rooms. </p>
+                </div>
+                <div class="column">
+                    <h4>What are the instructions if you want to park your car at the HZ parking lot?</h4>
+                    <p>The HZ has a new parking lot available for location Het Groene Woud in Middelburg. On the site at the Poelendaelesingel 10 (formerly the PZEM site) 100 parking spaces are available for students, staff and visitors. The free parking at the Kousteensedijk will no longer be available.</p>
+                </div>
+                <div class="column">
+                    <h4>How does the coffee machine work at the HZ?</h4>
+                    <ul>
+                        <li>Ensure you have enough credit on your HZ pass.</li>
+                        <li>Hold your pass against the TouchID.</li>
+                        <li>Select the coffee of your choice on the touch screen.</li>
+                        <li>Select start on the touch screen.</li>
+                    </ul>
+                </div>
+            </div>
 
         </body>
     </html>
