--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li><a href="profile.html">Profile page</a></li>
                 <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a href="faq.html">Frequently Asked Questions (FAQ)</a></li>
+                <li><a href="motivation.html">My Motivation</a></li>
             </ul>
             <div class="container">
                 <p>Welcome</p>
