--- a/dashboard.html
+++ b/dashboard.html
@@ -44,6 +44,7 @@
                 <li><a href="profile.html">Profile page</a></li>
                 <li><a class="active" href="dashboard.html">Dashboard</a></li>
                 <li><a href="faq.html">Frequently Asked Questions (FAQ)</a></li>
+                <li><a href="motivation.html">My Motivation</a></li>
             </ul>
             <div class="row">
                 <div class="column">
