--- a/profile.html
+++ b/profile.html
@@ -33,6 +33,7 @@
                 <li><a class="active" href="profile.html">Profile page</a></li>
                 <li><a href="dashboard.html">Dashboard</a></li>
                 <li><a href="faq.html">Frequently Asked Questions (FAQ)</a></li>
+                <li><a href="motivation.html">My Motivation</a></li>
             </ul> 
             <h2 class="p-intro">Who am I?</h2>
             <pre class="intro">
